[package]
name = "gotron"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
rand = "0.8.5"
rick-and-morty = "0.1.0"
serde = "1.0.147"
serde_json = "1.0.87"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tokio-compat-02 = "0.2.0"
warp = "0.3.3"
warp-reverse-proxy = "0.5.0"
